--- a/index.html
+++ b/index.html
@@ -20,5 +20,20 @@
 			</div>
 		</div>
 	</section>
+	<section class="platforms" id="platforms">
+		<div class="wrap">
+			<div class="platforms-text-block">
+				<div class="section-uptitle">new design</div>
+				<h2 class="section-title">There is no other platforms for you as like ....</h2>
+				<p class="section-text platforms-text">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur.
+				</p>
+				<p class="section-text platforms-text">Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
+				</p>
+			</div>
+			<div class="platforms-img-block">
+				
+			</div>
+		</div>
+	</section>
 </body>
 </html>
