add three section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<section class="platforms" id="platforms">
 		<div class="wrap">
 			<div class="platforms-text-block">
-				<div class="section-uptitle">new design</div>
+				<p class="section-uptitle">new design</p>
 				<h2 class="section-title">There is no other platforms for you as like ....</h2>
 				<p class="section-text platforms-text">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur.
 				</p>
@@ -31,7 +31,32 @@
 				</p>
 			</div>
 			<div class="platforms-img-block">
-				
+				<div class="wrap-img-block"></div>
+			</div>
+		</div>
+	</section>
+	<section id="awesome-features">
+		<div class="features">
+			<div class="wrap">
+				<p class="section-uptitle features-uptitle">new features</p>
+				<h2 class="section-title features-title">Some awesone features</h2>
+				<div class="features-block-area">
+					<div class="features-block">
+						<img src="img/feature-logo-cart-1.png" alt="block-logo" class="features-block-logo">
+						<h4 class="features-block-title">Some awesone features</h4>
+						<p class="features-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+					</div>
+					<div class="features-block">
+						<img src="img/feature-logo-cart-2.png" alt="block-logo" class="features-block-logo">
+						<h4 class="features-block-title">Some awesone features</h4>
+						<p class="features-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+					</div>
+					<div class="features-block">
+						<img src="img/feature-logo-cart-3.png" alt="block-logo" class="features-block-logo">
+						<h4 class="features-block-title">Some awesone features</h4>
+						<p class="features-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
