--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale 1">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Exo:100,400,400i,500|Lato" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
@@ -11,7 +12,7 @@
 <body>
 	<section id="header">
 		<div class="header">
-			<video src="#" class="header-video" poster="img/video-bg.png"></video>
+			<video src="img/main-bg.mp4" class="header-video" autoplay loop muted></video>
 			<div class="header-video-wrap">
 				<h1 class="header-title">There is no other platforms for you as like</h1>
 				<a href="#" class="play-btn"><i class="fas fa-play"></i></a>
@@ -60,5 +61,93 @@
 			</div>
 		</div>
 	</section>
+	<section id="resposive">
+		<div class="resposive">
+			<div class="resposive-img">
+				<img src="img/design-bg.png" class="resposive-img-pict" alt="notebook picture"></div>
+			<div class="resposive-text-block">
+				<div class="section-uptitle resposive-uptitle">new design</div>
+				<div class="section-title resposive-title">Resposive design, just need your tap </div>
+				<div class="resposive-text">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</div>
+			</div>
+		</div>
+	</section>
+	<section id="partners">
+		<div class="partners">
+			<div class="feedback-block">
+				<div class="feedback-block-cart">
+					<div class="feedback-block-cart-logo"></div>
+					<h3 class="feedback-block-cart-name">Jonathon Doe</h3>
+					<h4 class="feedback-block-cart-prof">Co Founder</h4>
+					<p class="feedback-block-cart-text">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
+				</div>
+				<div class="feedback-block-cart">
+					<div class="feedback-block-cart-logo"></div>
+					<h3 class="feedback-block-cart-name">Jonathon Doe</h3>
+					<h4 class="feedback-block-cart-prof">Co Founder</h4>
+					<p class="feedback-block-cart-text">“Pellentesque ornare sem lacinia quam. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn”</p>
+				</div>
+				<div class="feedback-block-cart">
+					<div class="feedback-block-cart-logo"></div>
+					<h3 class="feedback-block-cart-name">Jonathon Doe</h3>
+					<h4 class="feedback-block-cart-prof">Co Founder</h4>
+					<p class="feedback-block-cart-text">“Aenean eu leo quam. Pellentesque ornare sem lacinia qua emere wancerid elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn”</p>
+				</div>
+			</div>
+			<div class="sponsors-block">
+				<img src="img/logos.png" alt="sponsor picture">
+			</div>
+		</div>
+	</section>
+	<section id="browser" class="browser">
+		<p class="section-uptitle browser-uptitle">new features</p>
+		<h2 class="section-title browser-title">Some awesone features</h2>
+		<p class="browser-text">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
+		<img src="img/browser-bg.png" alt="picture of the browser page" class="browser-picture">
+	</section>
+	<section id="reg" class="reg">
+		<p class="section-uptitle reg-uptitle">new features</p>
+		<h2 class="section-title reg-title">Over 1000 designers are using</h2>
+		<form action="#" class="reg-form">
+			<input type="text" class="reg-form-item" placeholder="full name">
+			<input type="email" class="reg-form-item" placeholder="your email">
+			<input type="password" class="reg-form-item" placeholder="password">
+			<button type="submit" class="reg-form-btn">try now</button>
+		</form>
+		<p class="reg-undertext">By Signing up you agree to our <a href="#" class="reg-link">terms & Services</a>.</p>
+	</section>
+	<footer>
+		<div class="footer">
+				<div class="footer-block-area">
+						<div class="address footer-block">
+						<h2 class="block-title">Start <span class="polygon-bg">Ex</span></h2>
+						<p class="address-text">Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam.
+						</p>
+						<a href="tel:18881234567" class="footer-link">USA &  CAN: 1-888-123-4567</a>
+						<a href="#" class="footer-link">Address: 34 Brokel Rd. NY</a>
+					</div>
+					<div class="support footer-block">
+						<h2 class="block-title">Support</h2>
+						<a href="#" class="footer-link">Help Center</a>
+						<a href="#" class="footer-link">Get Started</a>
+						<a href="#" class="footer-link">Contact US</a>
+					</div>
+					<div class="about footer-block">
+						<h2 class="block-title">About US</h2>
+						<a href="#" class="footer-link">About Us</a>
+						<a href="#" class="footer-link">Terms of Use</a>
+						<a href="#" class="footer-link">Privacy Policy</a>
+					</div>
+					<div class="newsletter footer-block">
+						<h2 class="block-title">Get Newsletter</h2>
+						<input type="text" class="newsletter-input"><button class="newsletter-btn" type="submit"><i class="fab fa-telegram-plane"></i></button></input>
+						<a href="#" class="social-link"><i class="fas fa-basketball-ball"></i></a>
+						<a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+						<a href="#" class="social-link"><i class="fab fa-google-plus-g"></i></a>
+						<a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+					</div>
+				</div>
+		</div>
+	</footer>
 </body>
 </html>
