--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<section id="header">
 		<div class="header">
-			<video src="img/main-bg.mp4" class="header-video" autoplay loop muted></video>
+			<video src="img/main-bg.mp4" class="header-video" poster="img/video-bg.png"></video>
 			<div class="header-video-wrap">
 				<h1 class="header-title">There is no other platforms for you as like</h1>
 				<a href="#" class="play-btn"><i class="fas fa-play"></i></a>
@@ -63,12 +63,14 @@
 	</section>
 	<section id="resposive">
 		<div class="resposive">
-			<div class="resposive-img">
-				<img src="img/design-bg.png" class="resposive-img-pict" alt="notebook picture"></div>
-			<div class="resposive-text-block">
-				<div class="section-uptitle resposive-uptitle">new design</div>
-				<div class="section-title resposive-title">Resposive design, just need your tap </div>
-				<div class="resposive-text">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</div>
+			<div class="wrap">
+				<div class="resposive-img">
+					<img src="img/design-bg.png" class="resposive-img-pict" alt="notebook picture"></div>
+				<div class="resposive-text-block">
+					<div class="section-uptitle resposive-uptitle">new design</div>
+					<div class="section-title resposive-title">Resposive design, just need your tap </div>
+					<div class="resposive-text">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -140,11 +142,13 @@
 					</div>
 					<div class="newsletter footer-block">
 						<h2 class="block-title">Get Newsletter</h2>
-						<input type="text" class="newsletter-input"><button class="newsletter-btn" type="submit"><i class="fab fa-telegram-plane"></i></button></input>
-						<a href="#" class="social-link"><i class="fas fa-basketball-ball"></i></a>
-						<a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
-						<a href="#" class="social-link"><i class="fab fa-google-plus-g"></i></a>
-						<a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+						<input type="text" class="newsletter-input" placeholder="email"><button class="newsletter-btn" type="submit"><img src="img/airplane.png" alt="airplane"></button></input>
+						<div class="social-link-block">
+							<a href="#" class="social-link"><i class="fas fa-basketball-ball"></i></a>
+							<a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+							<a href="#" class="social-link"><i class="fab fa-google-plus-g"></i></a>
+							<a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+						</div>
 					</div>
 				</div>
 		</div>
