--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale 1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Exo:100,400,400i,500|Lato" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -11,6 +11,18 @@
 </head>
 <body>
 	<section id="header">
+		<ul class="mobile-menu">
+			<li class="main-menu-item"><a href="#" class="main-menu-link">Menu</a>
+					<li class="mobile-menu-item"><a href="#header" class="mobile-menu-link">Home</a></li>
+					<li class="mobile-menu-item"><a href="#platforms" class="mobile-menu-link">Platforms</a></li>
+					<li class="mobile-menu-item"><a href="#awesome-features" class="mobile-menu-link">features</a></li>
+					<li class="mobile-menu-item"><a href="#resposive" class="mobile-menu-link">resposive</a></li>
+					<li class="mobile-menu-item"><a href="#partners" class="mobile-menu-link">partners</a></li>
+					<li class="mobile-menu-item"><a href="#browser" class="mobile-menu-link">browser</a></li>
+					<li class="mobile-menu-item"><a href="#reg" class="mobile-menu-link">registration</a></li>
+					<li class="mobile-menu-item"><a href="#footer" class="mobile-menu-link">contacts</a></li>
+			</li>
+		</ul>
 		<div class="header">
 			<video src="img/main-bg.mp4" class="header-video" poster="img/video-bg.png"></video>
 			<div class="header-video-wrap">
