--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Exo:100,400,400i,500|Lato" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Exo:100,400,400i,500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Corporate</title>
@@ -12,16 +13,18 @@
 <body>
 	<section id="header">
 		<ul class="mobile-menu">
-			<li class="main-menu-item"><a href="#" class="main-menu-link">Menu</a>
-					<li class="mobile-menu-item"><a href="#header" class="mobile-menu-link">Home</a></li>
-					<li class="mobile-menu-item"><a href="#platforms" class="mobile-menu-link">Platforms</a></li>
-					<li class="mobile-menu-item"><a href="#awesome-features" class="mobile-menu-link">features</a></li>
-					<li class="mobile-menu-item"><a href="#resposive" class="mobile-menu-link">resposive</a></li>
-					<li class="mobile-menu-item"><a href="#partners" class="mobile-menu-link">partners</a></li>
-					<li class="mobile-menu-item"><a href="#browser" class="mobile-menu-link">browser</a></li>
-					<li class="mobile-menu-item"><a href="#reg" class="mobile-menu-link">registration</a></li>
-					<li class="mobile-menu-item"><a href="#footer" class="mobile-menu-link">contacts</a></li>
-			</li>
+					<li class="menu-main-item">Menu
+						<ul class="sub-menu">
+							<li class="mobile-menu-item"><a href="#header" class="mobile-menu-link">Home</a></li>
+							<li class="mobile-menu-item"><a href="#platforms" class="mobile-menu-link">Platforms</a></li>
+							<li class="mobile-menu-item"><a href="#awesome-features" class="mobile-menu-link">features</a></li>
+							<li class="mobile-menu-item"><a href="#resposive" class="mobile-menu-link">resposive</a></li>
+							<li class="mobile-menu-item"><a href="#partners" class="mobile-menu-link">partners</a></li>
+							<li class="mobile-menu-item"><a href="#browser" class="mobile-menu-link">browser</a></li>
+							<li class="mobile-menu-item"><a href="#reg" class="mobile-menu-link">registration</a></li>
+							<li class="mobile-menu-item"><a href="#footer" class="mobile-menu-link">contacts</a></li>
+						</ul>
+					</li>
 		</ul>
 		<div class="header">
 			<video src="img/main-bg.mp4" class="header-video" poster="img/video-bg.png"></video>
@@ -79,7 +82,7 @@
 				<div class="resposive-img">
 					<img src="img/design-bg.png" class="resposive-img-pict" alt="notebook picture"></div>
 				<div class="resposive-text-block">
-					<div class="section-uptitle resposive-uptitle">new design</div>
+					<h2 class="section-uptitle resposive-uptitle">new design</h2>
 					<div class="section-title resposive-title">Resposive design, just need your tap </div>
 					<div class="resposive-text">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</div>
 				</div>
@@ -154,7 +157,7 @@
 					</div>
 					<div class="newsletter footer-block">
 						<h2 class="block-title">Get Newsletter</h2>
-						<input type="text" class="newsletter-input" placeholder="email"><button class="newsletter-btn" type="submit"><img src="img/airplane.png" alt="airplane"></button></input>
+						<input type="text" class="newsletter-input" placeholder="email"><button class="newsletter-btn" type="submit"><img src="img/airplane.png" alt="airplane"></button>
 						<div class="social-link-block">
 							<a href="#" class="social-link"><i class="fas fa-basketball-ball"></i></a>
 							<a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
